# simple-auth

./: .gitignore  README.md  TODO.txt  post-token.lua
actix-web/: .env  Cargo.toml  Dockerfile  docker-compose.yml
actix-web/sql/sql/: select_user.sql
actix-web/src/: main.rs
actix-web/src/auth/: claims.rs  config.rs  errors.rs  mod.rs  tokens.rs
akka-http/: build.sbt  rebuild-img.sh
akka-http/project/: plugins.sbt
akka-http/src/main/resources/: private_key.pem  private_key.pem_singleline  simple-token.conf
akka-http/src/main/scala/com/example/: Config.scala  Main.scala
akka-http/src/main/scala/com/example/auth/: KeyTools.scala  TestApp.scala  TokenCreator.scala
akka-http/src/main/scala/com/example/ops/: FutureOps.scala
akka-http/src/main/scala/com/example/route/: TokenRoute.scala
akka-http/src/test/scala/com/example/: Base64.scala  CryptoSpec.scala
axum/: Cargo.toml  Dockerfile
axum/src/: lib.rs  main.rs
axum/src/auth/: claims.rs  errors.rs  manager.rs  mod.rs  tokens.rs
db/: create.sql  db.Dockerfile  docker-compose.yml  init.sql  rm_docker.sh  run_db.sh
zio/: build.sbt  rebuild-img.sh
zio/project/: plugins.sbt
zio/src/main/resources/: logback.xml
zio/src/main/scala/com/example/: Main.scala
zio/src/main/scala/com/example/auth/: KeyTools.scala  TokenCreator.scala
zio/src/main/scala/com/example/db/: DbQuery.scala  UserInfo.scala
zio/src/main/scala/com/example/route/: TokenRoute.scala
